[*] Use Java 11 for better compatibility